--just quick reference

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="text/javascript" src="/js/mapdata.js"></script>		
+    <script>simplemaps_worldmap_mapdata.main_settings.auto_load = 'no';</script>
+    <script  type="text/javascript" src="/js/usmap.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
